--- a/404.md
+++ b/404.md
@@ -1,7 +1,10 @@
 ---
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
+layout: single
 sitemap: false
 ---
+
+## Error 404
 
 Sorry, but the page you were trying to view does not exist.
