Add links to subsequent relevant instructions after installation

--- a/_posts/installation/0000-01-03-unraid.md
+++ b/_posts/installation/0000-01-03-unraid.md
@@ -56,4 +56,9 @@ If you want to grab any updates you can type:
 ```bash 
 docker-compose pull
 ```
+
 Thanks to [u/Tusc00](https://old.reddit.com/user/Tusc00) for this [write up](https://old.reddit.com/r/unRAID/comments/knaniy/librephotos/goeyy4l/)!
+
+## Next Steps
+
+Next, take a look at the [first steps after setup]({% post_url user_guide/0000-02-01-first_steps %}).
