Add documentation for face recognition

--- a/_posts/installation/0000-01-03-unraid.md
+++ b/_posts/installation/0000-01-03-unraid.md
@@ -1,5 +1,5 @@
 ---
-title: "Docker Compose on unRAID"
+title: "Docker Compose (unRAID)"
 excerpt: "How to install Libre Photos on Unraid using Docker Compose."
 last_modified_at: 2021-06-26
 category: 1
