--- a/_posts/installation/0000-01-06-updating.md
+++ b/_posts/installation/0000-01-06-updating.md
@@ -1,5 +1,5 @@
 ---
-title: "Updating LibrePhotos"
+title: "Updating"
 excerpt: "How to install update LibrePhotos"
 last_modified_at: 2021-10-06
 category: 1 
