--- a/_posts/user_guide/0000-02-12-faq.md
+++ b/_posts/user_guide/0000-02-12-faq.md
@@ -1,10 +1,11 @@
 ---
-title: "Proxmox - Scan always fails after importing few images"
+title: "Frequently asked questions"
 excerpt: "Scan always fails after importing few images"
 last_modified_at: 2021-10-07
-category: 3
+category: 2
 ---
 
+## Proxmox - Scan always fails after importing few images
 ### Symptom
 
 You get errors like these and you use Proxmox:
