--- a/_posts/installation/0000-01-03-unraid.md
+++ b/_posts/installation/0000-01-03-unraid.md
@@ -1,38 +1,51 @@
 ---
-title: "Docker Compose (unRAID)"
+title: "📦 unRAID"
 excerpt: "How to install Libre Photos on Unraid using Docker Compose."
 last_modified_at: 2021-06-26
 category: 1
 ---
+
 You have to download docker-compose. You can add the following to your /boot/config/go file to make sure it's always available:
+
 ```bash
 curl -L "https://github.com/docker/compose/releases/download/1.28.2/docker-compose-$(uname -s)$(uname -m)" -o /usr/local/bin/docker-compose`
 sudo chmod +x /usr/local/bin/docker-compose
 ```
+
 You'll need to create a folder under /mnt/user (e.g. librephotos) within there you'll need two files:
 
 Download this file and save it as .env:
+
 ```bash
 wget -O .env https://raw.githubusercontent.com/LibrePhotos/librephotos-docker/main/librephotos.env
 ```
+
 ​Download this file to same directory but keep the original name:
-```bash 
+
+```bash
 wget https://raw.githubusercontent.com/LibrePhotos/librephotos-docker/main/docker-compose.yml`
 ```
+
 You'll need to edit the .env file with paths to your photos (myPhotos) and possibly the timeZone variable. Optionally you'll want to grab a mapbox API key as documented in the file. Keep note of the default http port, 3200.
 
 ​Once done you can fire up the containers by typing:
-```bash 
+
+```bash
 docker-compose up -d
 ```
+
 This will cause the containers to startup in the background. You can check the status of them by running:
-```bash 
+
+```bash
 docker logs {container name}
 ```
+
 You can get a name for each of the containers by typing:
-```bash 
+
+```bash
 docker ps | grep librephoto
 ```
+
 Finally, you can access the UI by going to http://unraidip:3200
 
 Default userName and userPass are in .env file.
@@ -45,15 +58,20 @@ Go back to the drop down and select Settings. Scroll to the bottom and select Sc
 ​
 
 You can also monitor progress from shell prompt by tailing this file:
-```bash 
+
+```bash
 tail -f librephotos_logs/ownphotos.log
 ```
+
 To shut everything down:
+
 ```bash
 docker-compose down
 ```
+
 If you want to grab any updates you can type:
-```bash 
+
+```bash
 docker-compose pull
 ```
 
