--- a/_posts/user_guide/0000-02-12-faq.md
+++ b/_posts/user_guide/0000-02-12-faq.md
@@ -1,14 +1,16 @@
 ---
-title: "Frequently asked questions"
+title: "❓ FAQ"
 excerpt: "Scan always fails after importing few images"
 last_modified_at: 2021-10-07
 category: 2
 ---
 
 ## Proxmox - Scan always fails after importing few images
+
 ### Symptom
 
 You get errors like these and you use Proxmox:
+
 ```
 Thread 0x00007fc8dcf3f640 (most recent call first):
   File "/usr/lib/python3.9/threading.py", line 316 in wait
@@ -38,8 +40,10 @@ Current thread 0x00007fc998cf8640 (most recent call first):
   File "/usr/lib/python3.9/threading.py", line 892 in run
   File "/usr/lib/python3.9/threading.py", line 954 in _bootstrap_inner
   File "/usr/lib/python3.9/threading.py", line 912 in _bootstrap
-  ```
+```
+
 ### Solution:
+
 This is a problem with proxmox, More specifically with the way CPU was emulated. By default Qemu in Proxmox uses its own CPU type kvm64, which has a reduced CPU flags set, to guaranteed that it works everywhere. This means that necessary flags like SSE and AVX are absent, which causes the Fatal Python error: Illegal instruction error.
 
 To fix this one must either manually edit the .conf file and add the flags needed to the kvm64 CPU type, or pick a different method of CPU emulation.
