Adding comment for rebooting on unraid

--- a/_posts/installation/0000-01-03-unraid.md
+++ b/_posts/installation/0000-01-03-unraid.md
@@ -75,7 +75,11 @@ If you want to grab any updates you can type:
 docker-compose pull
 ```
 
-Thanks to [u/Tusc00](https://old.reddit.com/user/Tusc00) for this [write up](https://old.reddit.com/r/unRAID/comments/knaniy/librephotos/goeyy4l/)!
+## docker-compose issues when rebooting
+
+After a reboot docker-compose is not installed anymore, since unRAID loads everything from ram. Someone created a Docker Compose Manager app in the Apps catalog for unRAID. This makes sure docker-compose is installed everytime you reboot unRAID and they are currently working on a WebGUI.
+
+Thanks to [u/Tusc00](https://old.reddit.com/user/Tusc00) and Martijn (Spiek90) for this [write up](https://old.reddit.com/r/unRAID/comments/knaniy/librephotos/goeyy4l/)!
 
 ## Next Steps
 
