Add new line for dark mode
- also correct sharable link for Immisch

--- a/_posts/user_guide/0000-02-05-features.md
+++ b/_posts/user_guide/0000-02-05-features.md
@@ -35,13 +35,14 @@ category: 2
 | Syncing metadata to file               | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
 | Multiuser support                      | ✔️          | ✔️                                                  | ❌                                                     | ✔️                                               |
 | Share between users                    | ✔️          | ✔️                                                  | ❌                                                     | ❌                                               |
-| Share as unique link                   | ❌          | ✔️                                                  | ✔️                                                     | ✔️                                               |
+| Share as unique link                   | ❌          | ✔️                                                  | ✔️                                                     | ❌                                               |
 | Share as public page                   | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
 | Upload images and videos               | ✔️          | ❌                                                  | ✔️                                                     | ✔️                                               |
 | Delete images and videos               | ✔️          | ❌                                                  | ✔️                                                     | ✔️                                               |
 | Website                                | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
 | iOS App                                | ❌          | ✔️                                                  | ❌                                                     | ✔️                                               |
 | Android App                            | 🚧          | ❌                                                  | ❌                                                     | ✔️                                               |
+| Dark mode                              | ❌          | ✔️                                                  | ✔️                                                     | ✔️                                               |
 | Auto backup from app                   | ❌          | ❌                                                  | ❌                                                     | ✔️                                               |
 | Multi language support                 | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
 | Support for older CPUs                 | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
