Add link to LibrePhotos

--- a/_posts/user_guide/0000-02-05-features.md
+++ b/_posts/user_guide/0000-02-05-features.md
@@ -7,42 +7,42 @@ category: 2
 
 ## Features compared to competitors
 
-| Feature                                | LibrePhotos | [Photoview](https://github.com/Photoview/Photoview) | [Photoprism](https://github.com/Photoprism/Photoprism) | [Immich](https://github.com/alextran1502/immich) |
-| -------------------------------------- | ----------- | --------------------------------------------------- | ------------------------------------------------------ | ------------------------------------------------ |
-| Photo                                  | ✔️          | ✔️                                                  | ✔️                                                     | ✔️                                               |
-| Video                                  | ✔️          | ✔️                                                  | ✔️                                                     | ✔️                                               |
-| Raw Photos                             | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| Heic Photos                            | ✔️          | ✔️                                                  | ✔️                                                     | ✔️                                               |
-| Live Photos                            | ❌          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| x265 videos                            | ❌          | ✔️                                                  | ✔️                                                     | ✔️                                               |
-| Timeline View                          | ✔️          | ✔️                                                  | ❌                                                     | ✔️                                               |
-| Search by horizontal scrolling         | ✔️          | ❌                                                  | ❌                                                     | ✔️                                               |
-| Does not touch folder structure        | ✔️          | ✔️                                                  | ❌                                                     | ❌                                               |
-| Album management                       | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| Places Albums                          | ✔️          | ❌                                                  | ❌                                                     | ✔️                                               |
-| Search photos on map                   | ❌          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| Auto albums                            | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
-| Face recognition / Face classification | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| Face clustering                        | ❌          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| Reverse geocoding                      | ✔️          | 🚧                                                  | ✔️                                                     | ✔️                                               |
-| Scene detection                        | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
-| Attributes detection                   | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
-| Category detection                     | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
-| Object detection                       | ✔️          | ❌                                                  | ✔️                                                     | ✔️                                               |
-| Semantic image search                  | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
-| Search by metadata                     | 🚧          | ❌                                                  | ✔️                                                     | ✔️                                               |
-| Editing by metadata                    | 🚧          | ❌                                                  | ✔️                                                     | ❌                                               |
-| Syncing metadata to file               | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
-| Multiuser support                      | ✔️          | ✔️                                                  | ❌                                                     | ✔️                                               |
-| Share between users                    | ✔️          | ✔️                                                  | ❌                                                     | ❌                                               |
-| Share as unique link                   | ❌          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| Share as public page                   | ✔️          | ❌                                                  | ❌                                                     | ❌                                               |
-| Upload images and videos               | ✔️          | ❌                                                  | ✔️                                                     | ✔️                                               |
-| Delete images and videos               | ✔️          | ❌                                                  | ✔️                                                     | ✔️                                               |
-| Website                                | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| iOS App                                | ❌          | ✔️                                                  | ❌                                                     | ✔️                                               |
-| Android App                            | 🚧          | ❌                                                  | ❌                                                     | ✔️                                               |
-| Dark mode                              | ❌          | ✔️                                                  | ✔️                                                     | ✔️                                               |
-| Auto backup from app                   | ❌          | ❌                                                  | ❌                                                     | ✔️                                               |
-| Multi language support                 | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
-| Support for older CPUs                 | ✔️          | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Feature                                | [LibrePhotos](https://github.com/LibrePhotos/LibrePhotos) | [Photoview](https://github.com/Photoview/Photoview) | [Photoprism](https://github.com/Photoprism/Photoprism) | [Immich](https://github.com/alextran1502/immich) |
+| -------------------------------------- | --------------------------------------------------------- | --------------------------------------------------- | ------------------------------------------------------ | ------------------------------------------------ |
+| Photo                                  | ✔️                                                        | ✔️                                                  | ✔️                                                     | ✔️                                               |
+| Video                                  | ✔️                                                        | ✔️                                                  | ✔️                                                     | ✔️                                               |
+| Raw Photos                             | ✔️                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Heic Photos                            | ✔️                                                        | ✔️                                                  | ✔️                                                     | ✔️                                               |
+| Live Photos                            | ❌                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| x265 videos                            | ❌                                                        | ✔️                                                  | ✔️                                                     | ✔️                                               |
+| Timeline View                          | ✔️                                                        | ✔️                                                  | ❌                                                     | ✔️                                               |
+| Search by horizontal scrolling         | ✔️                                                        | ❌                                                  | ❌                                                     | ✔️                                               |
+| Does not touch folder structure        | ✔️                                                        | ✔️                                                  | ❌                                                     | ❌                                               |
+| Album management                       | ✔️                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Places Albums                          | ✔️                                                        | ❌                                                  | ❌                                                     | ✔️                                               |
+| Search photos on map                   | ❌                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Auto albums                            | ✔️                                                        | ❌                                                  | ❌                                                     | ❌                                               |
+| Face recognition / Face classification | ✔️                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Face clustering                        | ❌                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Reverse geocoding                      | ✔️                                                        | 🚧                                                  | ✔️                                                     | ✔️                                               |
+| Scene detection                        | ✔️                                                        | ❌                                                  | ❌                                                     | ❌                                               |
+| Attributes detection                   | ✔️                                                        | ❌                                                  | ❌                                                     | ❌                                               |
+| Category detection                     | ✔️                                                        | ❌                                                  | ❌                                                     | ❌                                               |
+| Object detection                       | ✔️                                                        | ❌                                                  | ✔️                                                     | ✔️                                               |
+| Semantic image search                  | ✔️                                                        | ❌                                                  | ❌                                                     | ❌                                               |
+| Search by metadata                     | 🚧                                                        | ❌                                                  | ✔️                                                     | ✔️                                               |
+| Editing by metadata                    | 🚧                                                        | ❌                                                  | ✔️                                                     | ❌                                               |
+| Syncing metadata to file               | ✔️                                                        | ❌                                                  | ❌                                                     | ❌                                               |
+| Multiuser support                      | ✔️                                                        | ✔️                                                  | ❌                                                     | ✔️                                               |
+| Share between users                    | ✔️                                                        | ✔️                                                  | ❌                                                     | ❌                                               |
+| Share as unique link                   | ❌                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Share as public page                   | ✔️                                                        | ❌                                                  | ❌                                                     | ❌                                               |
+| Upload images and videos               | ✔️                                                        | ❌                                                  | ✔️                                                     | ✔️                                               |
+| Delete images and videos               | ✔️                                                        | ❌                                                  | ✔️                                                     | ✔️                                               |
+| Website                                | ✔️                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| iOS App                                | ❌                                                        | ✔️                                                  | ❌                                                     | ✔️                                               |
+| Android App                            | 🚧                                                        | ❌                                                  | ❌                                                     | ✔️                                               |
+| Dark mode                              | ❌                                                        | ✔️                                                  | ✔️                                                     | ✔️                                               |
+| Auto backup from app                   | ❌                                                        | ❌                                                  | ❌                                                     | ✔️                                               |
+| Multi language support                 | ✔️                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
+| Support for older CPUs                 | ✔️                                                        | ✔️                                                  | ✔️                                                     | ❌                                               |
