update installation instruction for unraid

--- a/_posts/installation/0000-01-03-unraid.md
+++ b/_posts/installation/0000-01-03-unraid.md
@@ -1,18 +1,26 @@
 ---
 title: "📦 unRAID"
 excerpt: "How to install Libre Photos on Unraid using Docker Compose."
-last_modified_at: 2021-06-26
+last_modified_at: 2022-04-30
 category: 1
 ---
 
 You have to download docker-compose. You can add the following to your /boot/config/go file to make sure it's always available:
 
 ```bash
-curl -L "https://github.com/docker/compose/releases/download/1.28.2/docker-compose-$(uname -s)$(uname -m)" -o /usr/local/bin/docker-compose`
-sudo chmod +x /usr/local/bin/docker-compose
+curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+chmod +x /usr/local/bin/docker-compose
+```
+Check if it's working:
+```bash
+docker-compose --version
 ```
 
 You'll need to create a folder under /mnt/user (e.g. librephotos) within there you'll need two files:
+
+```bash
+mkdir /mnt/user/librephotos && cd /mnt/user/librephotos
+```
 
 Download this file and save it as .env:
 
@@ -23,10 +31,11 @@ wget -O .env https://raw.githubusercontent.com/LibrePhotos/librephotos-docker/ma
 ​Download this file to same directory but keep the original name:
 
 ```bash
-wget https://raw.githubusercontent.com/LibrePhotos/librephotos-docker/main/docker-compose.yml`
+wget https://raw.githubusercontent.com/LibrePhotos/librephotos-docker/main/docker-compose.yml
 ```
 
-You'll need to edit the .env file with paths to your photos (myPhotos) and possibly the timeZone variable. Optionally you'll want to grab a mapbox API key as documented in the file. Keep note of the default http port, 3200.
+You'll need to edit the .env file with paths to your photos (myPhotos) and possibly the timeZone variable. Optionally you'll want to grab a mapbox API key as documented in the file. Keep note of the default http port, 3000.
+You should have LibrePhotos accessible after a few minutes of boot-up on unraidip:3000 unless you changed this in the .env file. The username is admin & the password is admin unless you changed them in the .env file. It is recommended you change the admin username and password if LibrePhotos is going to be publicly accessible. This is done via the .env file.
 
 ​Once done you can fire up the containers by typing:
 
@@ -46,9 +55,7 @@ You can get a name for each of the containers by typing:
 docker ps | grep librephoto
 ```
 
-Finally, you can access the UI by going to http://unraidip:3200
-
-Default userName and userPass are in .env file.
+Finally, you can access the UI by going to http://unraidip:3000
 
 First thing you'll want to do in the UI is go to the drop down menu located at the top right under avatar and select Admin Area.
 
