Updated Immich info

--- a/_posts/user_guide/0000-02-05-features.md
+++ b/_posts/user_guide/0000-02-05-features.md
@@ -68,7 +68,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>✔️</td>
         <p hidden>PhotoPrism</p>     <td>✔️</td>
-        <p hidden>Immich</p>         <td>❌</td>
+        <p hidden>Immich</p>         <td>✔️</td>
         <p hidden>Photonix</p>       <td>✔️</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -187,7 +187,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>✔️</td>
         <p hidden>PhotoPrism</p>     <td>✔️</td>
-        <p hidden>Immich</p>         <td>❌</td>
+        <p hidden>Immich</p>         <td>✔️</td>
         <p hidden>Photonix</p>       <td>✔️</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -459,7 +459,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>✔️</td>
         <p hidden>PhotoPrism</p>     <td>❌</td>
-        <p hidden>Immich</p>         <td>❌</td>
+        <p hidden>Immich</p>         <td>✔️</td>
         <p hidden>Photonix</p>       <td>❌</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -544,7 +544,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>✔️</td>
         <p hidden>PhotoPrism</p>     <td>✔️</td>
-        <p hidden>Immich</p>         <td>❌</td>
+        <p hidden>Immich</p>         <td>✔️</td>
         <p hidden>Photonix</p>       <td>✔️</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -629,7 +629,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>✔️</td>
         <p hidden>PhotoPrism</p>     <td>✔️</td>
-        <p hidden>Immich</p>         <td>❌</td>
+        <p hidden>Immich</p>         <td>✔️</td>
         <p hidden>Photonix</p>       <td>❌</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -866,7 +866,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>❔</td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
-        <p hidden>Immich</p>         <td>❔</td>
+        <p hidden>Immich</p>         <td>❌</td>
         <p hidden>Photonix</p>       <td>❔</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -880,10 +880,10 @@ category: 2
     </tr>
     <tr>
         <td>Github Stars/Forks</td>
-        <p hidden>LibrePhotos</p>    <td>❔</td>
+        <p hidden>LibrePhotos</p>    <td><a href="https://github.com/LibrePhotos/librephotos"><img src="https://img.shields.io/github/stars/LibrePhotos/librephotos.svg?style=for-the-badge&color=3F51B5&logoColor=000000" alt="LibrePhotos Start"></a></td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
-        <p hidden>Immich</p>         <td>❔</td>
+        <p hidden>Immich</p>         <td><a href="https://github.com/alextran1502/immich"><img src="https://img.shields.io/github/stars/alextran1502/immich.svg?style=for-the-badge&color=3F51B5&logoColor=000000" alt="Immich Start"></a></td>
         <p hidden>Photonix</p>       <td>❔</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -900,7 +900,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>❔</td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
-        <p hidden>Immich</p>         <td>❔</td>
+        <p hidden>Immich</p>         <td>❌</td>
         <p hidden>Photonix</p>       <td>❔</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -917,7 +917,7 @@ category: 2
         <p hidden>LibrePhotos</p>    <td>❔</td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
-        <p hidden>Immich</p>         <td>❔</td>
+        <p hidden>Immich</p>         <td>❌</td>
         <p hidden>Photonix</p>       <td>❔</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
@@ -931,10 +931,11 @@ category: 2
     </tr>
     <tr>
         <td> License</td>
-        <p hidden>LibrePhotos</p>    <td>❔</td>
+        <p hidden>LibrePhotos</p>    <td>
+        MIT</td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
-        <p hidden>Immich</p>         <td>❔</td>
+        <p hidden>Immich</p>         <td>MIT</td>
         <p hidden>Photonix</p>       <td>❔</td>
         <p hidden>Damselfly</p>      <td>❔</td>
         <p hidden>Synology Photos</p><td>❔</td>
