Add new features to docs

--- a/_posts/user_guide/0000-02-05-features.md
+++ b/_posts/user_guide/0000-02-05-features.md
@@ -269,7 +269,7 @@ category: 2
     </tr>
     <tr>
         <td>Face clustering</td>
-        <p hidden>LibrePhotos</p>    <td>❌</td>
+        <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>✔️</td>
         <p hidden>PhotoPrism</p>     <td>✔️</td>
         <p hidden>Immich</p>         <td>❌</td>
@@ -575,7 +575,7 @@ category: 2
     </tr>
     <tr>
         <td>Android App</td>
-        <p hidden>LibrePhotos</p>    <td>🚧</td>
+        <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>❌</td>
         <p hidden>PhotoPrism</p>     <td>❌</td>
         <p hidden>Immich</p>         <td>✔️</td>
@@ -592,7 +592,7 @@ category: 2
     </tr>
     <tr>
         <td>Dark mode</td>
-        <p hidden>LibrePhotos</p>    <td>❌</td>
+        <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>✔️</td>
         <p hidden>PhotoPrism</p>     <td>✔️</td>
         <p hidden>Immich</p>         <td>✔️</td>
@@ -660,7 +660,7 @@ category: 2
     </tr>
     <tr>
         <td>Size</td>
-        <p hidden>LibrePhotos</p>    <td>❔</td>
+        <p hidden>LibrePhotos</p>    <td><img alt="Docker Image Size (latest by date)" src="https://img.shields.io/docker/image-size/reallibrephotos/singleton"></td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
         <p hidden>Immich</p>         <td>❔</td>
@@ -914,7 +914,7 @@ category: 2
     </tr>
     <tr>
         <td>Sells your data</td>
-        <p hidden>LibrePhotos</p>    <td>❔</td>
+        <p hidden>LibrePhotos</p>    <td>❌</td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
         <p hidden>Immich</p>         <td>❌</td>
@@ -949,7 +949,7 @@ category: 2
     </tr>
     <tr>
         <td>Docker downloads</td>
-        <p hidden>LibrePhotos</p>    <td>❔</td>
+        <p hidden>LibrePhotos</p>    <td><img alt="Docker Pulls" src="https://img.shields.io/docker/pulls/reallibrephotos/librephotos"></td>
         <p hidden>Photoview</p>      <td>❔</td>
         <p hidden>PhotoPrism</p>     <td>❔</td>
         <p hidden>Immich</p>         <td>❔</td>
