Add community app to unraid

--- a/_posts/installation/0000-01-03-unraid.md
+++ b/_posts/installation/0000-01-03-unraid.md
@@ -5,13 +5,21 @@ last_modified_at: 2022-04-30
 category: 1
 ---
 
+## Community App
+
+We are now also a [community app](https://unraid.net/community/apps?q=LibrePhotos#r) based on the singleton image.
+
+## Docker Compose
+
 You have to download docker-compose. You can add the following to your /boot/config/go file to make sure it's always available:
 
 ```bash
 curl -L "https://github.com/docker/compose/releases/download/v2.5.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 chmod +x /usr/local/bin/docker-compose
 ```
+
 Check if it's working:
+
 ```bash
 docker-compose --version
 ```
