--- a/_posts/user_guide/0000-02-06-mobile.md
+++ b/_posts/user_guide/0000-02-06-mobile.md
@@ -15,6 +15,6 @@ The app is currently in closed beta on the Google Play store. Contact me kurosav
 
 ## LibrePhotos Mobile
 
-[LibrePhotos Mobile](https://github.com/LibrePhotos/librephotos-mobile) is the offical app, which is at the proof-of-concept stage. It's writte in react-native and in the future will share more code with the frontend.
+[LibrePhotos Mobile](https://github.com/LibrePhotos/librephotos-mobile) is the offical app, which is at the proof-of-concept stage. It's written in react-native and in the future will share more code with the frontend.
 
-You can download the .apk [here](https://github.com/LibrePhotos/librephotos-mobile/releases/tag/v1.0.3). It is technically possible to compile it to also work on iOS, but nobody steped up to do that yet.
+You can download the .apk [here](https://github.com/LibrePhotos/librephotos-mobile/releases/tag/v1.0.3). It is technically possible to compile it to also work on iOS, but nobody stepped up to do that yet.
