Corrected typo/spelling.
'Searh' vs 'Search'

--- a/_posts/user_guide/0000-02-05-features.md
+++ b/_posts/user_guide/0000-02-05-features.md
@@ -149,7 +149,7 @@ category: 2
         <p hidden>digiKam</p>        <td>❔</td>
     </tr>
     <tr>
-        <td>Searh by horizontal scrolling</td>
+        <td>Search by horizontal scrolling</td>
         <p hidden>LibrePhotos</p>    <td>✔️</td>
         <p hidden>Photoview</p>      <td>❌</td>
         <p hidden>PhotoPrism</p>     <td>❌</td>
